--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
           <target>11</target>
         </configuration>
       </plugin>
-
+    </plugins>
+</build>
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
