--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,20 @@
     </site>
   </distributionManagement>
 
-  <build>
+ <build>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>11</source>
-          <target>11</target>
-        </configuration>
-      </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
+
+        </plugin>
+
     </plugins>
 </build>
       <plugin>
