--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+         <artifactId>maven-war-plugin</artifactId>
+          <version>3.4.0</version>  
             
         <configuration>
           <source>17</source>
