--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+               <version>3.12.1</version>
          <artifactId>maven-war-plugin</artifactId>
           <version>3.4.0</version>  
             
