--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-               <version>3.12.1</version>
+               <plugin>
          <artifactId>maven-war-plugin</artifactId>
           <version>3.4.0</version>  
-            
+            </plugin>
         <configuration>
           <source>17</source>
           <target>17</target>
