--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,10 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.11</version>
         </plugin>
-
+        <plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.4.0</version>
+        </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
