--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
   </modules>
 
   <distributionManagement>
-    <site>
-      <id>site-server</id>
-      <name>Test Project Site</name>
-      <url>file:///tmp/maven-project-site</url>
-    </site>
+    <repository>
+      <id>devops</id>
+      <name>Release Distribution Repository</name>
+      <url>http://10.32.1.12:32000/repository/devops</url>
+    </repository>
   </distributionManagement>
 
   <build>
