--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,11 @@
   </modules>
 
   <distributionManagement>
-
+    <site>
+      <id>site-server</id>
+      <name>Test Project Site</name>
+      <url>file:///tmp/maven-project-site</url>
+    </site>
   </distributionManagement>
 
   <build>
