--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,10 @@
 
   <distributionManagement>
     <repository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>corp1</id>
-      <name>Corporate Repository</name>
-      <url>scp://repo/maven2</url>
+      <uniqueVersion>true</uniqueVersion>
+      <id>devops</id>
+      <name>devops</name>
+      <url>http://10.32.1.12:32000/repository/devops/</url>
       <layout>default</layout>
     </repository>
   </distributionManagement>
